--- a/index.html
+++ b/index.html
@@ -3,45 +3,44 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AES-256-GCM Encoder</title>
+  <title>PBKDF2 + AES-256-GCM</title>
   <style>
     body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:#0b0b0f;color:#f5f5f7;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-    .box{width:min(900px,92vw);padding:24px;border:1px solid rgba(255,255,255,.12);border-radius:16px;background:rgba(255,255,255,.04)}
+    .box{width:min(960px,92vw);padding:24px;border:1px solid rgba(255,255,255,.12);border-radius:16px;background:rgba(255,255,255,.04)}
     h1{margin:0 0 10px;font-size:18px;opacity:.9}
     .row{display:flex;gap:10px;flex-wrap:wrap;margin:12px 0}
     input,textarea,button{border-radius:12px;border:1px solid rgba(255,255,255,.12);background:rgba(0,0,0,.25);color:#fff;padding:12px 14px;font-size:14px}
-    input,textarea{flex:1;min-width:240px}
-    textarea{width:100%;min-height:88px;resize:vertical}
+    input,textarea{flex:1;min-width:260px}
+    textarea{width:100%;min-height:92px;resize:vertical}
     button{cursor:pointer}
-    .hint{opacity:.7;font-size:12px;line-height:1.4;margin-top:8px}
+    .hint{opacity:.7;font-size:12px;line-height:1.45;margin-top:8px}
     code{word-break:break-all}
+    .danger{opacity:.85}
   </style>
 </head>
 <body>
   <div class="box">
-    <h1>AES-256-GCM (WebCrypto) — Mã hoá / Giải mã</h1>
+    <h1>Passphrase → PBKDF2 (SHA-256) → AES-256-GCM</h1>
 
     <div class="row">
       <input id="plain" value="Pham Duong" />
+      <input id="pass" placeholder="Nhập PASS (chỉ bạn biết)" />
       <button id="btnEnc">Encrypt</button>
     </div>
 
     <div class="row">
-      <textarea id="key" placeholder="KEY (b64url) sẽ xuất hiện ở đây..."></textarea>
+      <textarea id="token" placeholder="TOKEN v2.<salt>.<nonce>.<ciphertext>.<tag> sẽ xuất hiện ở đây..."></textarea>
     </div>
 
     <div class="row">
-      <textarea id="token" placeholder="TOKEN v1.<nonce>.<ciphertext>.<tag> sẽ xuất hiện ở đây..."></textarea>
-    </div>
-
-    <div class="row">
-      <button id="btnDec">Decrypt (dùng KEY + TOKEN)</button>
+      <button id="btnDec">Decrypt (dùng PASS + TOKEN)</button>
       <input id="out" placeholder="Kết quả giải mã..." />
     </div>
 
     <div class="hint">
-      - TOKEN format: <code>v1.&lt;nonce&gt;.&lt;ciphertext&gt;.&lt;tag&gt;</code> (Base64URL, bỏ dấu "=")<br>
-      - Không được dùng lại nonce với cùng key (GCM kỵ reuse IV).
+      <div><b>Format token:</b> <code>v2.&lt;salt&gt;.&lt;nonce&gt;.&lt;ciphertext&gt;.&lt;tag&gt;</code> (Base64URL, bỏ "=")</div>
+      <div class="danger">Quan trọng: PASS phải mạnh (dài + khó đoán). Token public vẫn OK vì không có PASS thì không giải được.</div>
+      <div>PBKDF2 iterations: <span id="it"></span> (có thể tăng/giảm theo máy).</div>
     </div>
   </div>
 
@@ -61,55 +60,80 @@
     return u8;
   };
 
-  async function encrypt() {
-    const enc = new TextEncoder();
-    const plain = enc.encode($("plain").value);
+  const enc = new TextEncoder();
+  const dec = new TextDecoder();
 
-    const keyObj = await crypto.subtle.generateKey(
-      { name: "AES-GCM", length: 256 },
-      true,
-      ["encrypt","decrypt"]
+  const PBKDF2_ITERS = 200000;
+  $("it").textContent = PBKDF2_ITERS.toLocaleString("vi-VN");
+
+  async function deriveAesKeyFromPass(pass, saltU8) {
+  
+    const passKey = await crypto.subtle.importKey(
+      "raw",
+      enc.encode(pass),
+      { name: "PBKDF2" },
+      false,
+      ["deriveKey"]
     );
 
-    const iv = crypto.getRandomValues(new Uint8Array(12)); // nonce 12 bytes
+    return crypto.subtle.deriveKey(
+      {
+        name: "PBKDF2",
+        salt: saltU8,
+        iterations: PBKDF2_ITERS,
+        hash: "SHA-256"
+      },
+      passKey,
+      { name: "AES-GCM", length: 256 },
+      false,
+      ["encrypt", "decrypt"]
+    );
+  }
 
-    const ctAll = new Uint8Array(await crypto.subtle.encrypt(
-      { name: "AES-GCM", iv },
-      keyObj,
-      plain
-    ));
+  async function encrypt() {
+    try {
+      const plain = $("plain").value;
+      const pass = $("pass").value;
 
-    const ciphertext = ctAll.slice(0, ctAll.length - 16);
-    const tag = ctAll.slice(ctAll.length - 16);
+      if (!pass || pass.length < 10) throw new Error("PASS nên >= 10 ký tự (khuyến nghị mạnh hơn).");
 
-    const rawKey = new Uint8Array(await crypto.subtle.exportKey("raw", keyObj));
+      const salt = crypto.getRandomValues(new Uint8Array(16)); // random salt
+      const nonce = crypto.getRandomValues(new Uint8Array(12)); // GCM nonce
 
-    $("key").value = b64url(rawKey);
-    $("token").value = `v1.${b64url(iv)}.${b64url(ciphertext)}.${b64url(tag)}`;
-    $("out").value = "";
+      const aesKey = await deriveAesKeyFromPass(pass, salt);
+
+      const ctAll = new Uint8Array(await crypto.subtle.encrypt(
+        { name: "AES-GCM", iv: nonce },
+        aesKey,
+        enc.encode(plain)
+      ));
+
+      const ciphertext = ctAll.slice(0, ctAll.length - 16);
+      const tag = ctAll.slice(ctAll.length - 16);
+
+      $("token").value = `v2.${b64url(salt)}.${b64url(nonce)}.${b64url(ciphertext)}.${b64url(tag)}`;
+      $("out").value = "";
+    } catch (e) {
+      $("out").value = "Encrypt failed: " + e.message;
+    }
   }
 
   async function decrypt() {
     try {
-      const keyB64 = $("key").value.trim();
+      const pass = $("pass").value.trim();
       const token = $("token").value.trim();
 
+      if (!pass) throw new Error("Nhập PASS trước.");
+
       const parts = token.split(".");
-      if (parts.length !== 4 || parts[0] !== "v1") throw new Error("TOKEN sai format.");
+      if (parts.length !== 5 || parts[0] !== "v2") throw new Error("TOKEN sai format v2.");
 
-      const nonce = b64urlToU8(parts[1]);
-      const ciphertext = b64urlToU8(parts[2]);
-      const tag = b64urlToU8(parts[3]);
+      const salt = b64urlToU8(parts[1]);
+      const nonce = b64urlToU8(parts[2]);
+      const ciphertext = b64urlToU8(parts[3]);
+      const tag = b64urlToU8(parts[4]);
 
-      const rawKey = b64urlToU8(keyB64);
-
-      const keyObj = await crypto.subtle.importKey(
-        "raw",
-        rawKey,
-        { name: "AES-GCM" },
-        false,
-        ["decrypt"]
-      );
+      const aesKey = await deriveAesKeyFromPass(pass, salt);
 
       const ctAll = new Uint8Array(ciphertext.length + tag.length);
       ctAll.set(ciphertext, 0);
@@ -117,11 +141,11 @@
 
       const pt = new Uint8Array(await crypto.subtle.decrypt(
         { name: "AES-GCM", iv: nonce },
-        keyObj,
+        aesKey,
         ctAll
       ));
 
-      $("out").value = new TextDecoder().decode(pt);
+      $("out").value = dec.decode(pt);
     } catch (e) {
       $("out").value = "Decrypt failed: " + e.message;
     }
