--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="row">
-      <input id="plain" placeholder="PLAINTEXT" value="Pham Duong" autocomplete="off" />
+      <input id="plain" placeholder="PLAINTEXT" value="" autocomplete="off" />
       <input id="iters" class="mini" type="number" value="600000" min="100000" step="100000" inputmode="numeric" />
     </div>
 
